@@ -55,6 +55,7 @@ CHANGELOG Roundcube Webmail
 - Fix so links over images are not removed in plain text signatures converted from HTML (#4473)
 - Fix various issues when downloading files with names containing non-ascii chars, use RFC 2231 (#5772)
 - Fix broken long filenames when using imap4d server - workaround server bug (#6048)
+- Fix so temp_dir misconfiguration prints an error to the log (#6045)
 
 RELEASE 1.3.3
 -------------
